<resources>
    <string name="app_name">Kompis</string>
    <string name="preference_file_key">me.pckv.kompisapp.PREFERENCE_FILE_KEY</string>
    <string name="logged_in_user_key">logged_in_user</string>

    <string name="welcome">"Welcome "</string>

    <string name="prompt_yes">Yes</string>
    <string name="prompt_no">No</string>

    <!-- register and login -->
    <string name="title_activity_login">Sign in</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>

    <string name="prompt_display_name">Display name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>


    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be 6 characters or longer</string>
    <string name="invalid_display_name">Display must be 2 characters or longer</string>

    <string name="login_failed">"Login failed"</string>
    <string name="create_user_failed">"Failed to create user"</string>

    <string name="created_user">"User created"</string>

    <!-- create listing -->
    <string name="prompt_title">Title</string>
    <string name="create_listing_driver">Create listing as a driver </string>

    <string name="invalid_title">Title must be 3 characters or longer</string>
    <string name="listing_created">Listing created</string>

    <string name="action_create_listing">Create listing</string>

    <string name="create_listing_failed">Failed to create listing</string>

    <!-- show listings -->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_delete">Delete</string>

    <string name="title_activity_listings">View listings</string>
    <string name="get_listings_failed">Failed to retrieve listings</string>
    <string name="search_hint">Search by title</string>

    <string name="assignee">Assignee</string>
    <string name="listing_assign">Assign yourself to this listing</string>
    <string name="owner_unassign">Unassign %s from this listing</string>
    <string name="listing_activate">Activate listing</string>
    <string name="listing_activated">Activated listing</string>
    <string name="listing_deactivated">Deactivated listing</string>
    <string name="listing_assigned">You are now assigned to this listing</string>
    <string name="listing_unassigned">You are no longer assigned to this listing</string>

    <string name="delete_listing_dialog">Delete listing</string>
    <string name="delete_listing_dialog_message">Are you sure you want to delete this listing?</string>

    <string name="listing_deleted">Listing deleted</string>

    <string name="owner_label">Owner %s</string>
    <string name="assignee_label">Assignee %s</string>
    <string name="distance_label">Distance %.1f km</string>

    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>
    <string name="google_maps_api_key">AIzaSyD-RPmk_7veuVD-O0KmU4REkFnFgRZGNik</string>


</resources>
